--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <p style="text-align:center; line-height:1.8;">
             ชื่อ : นายธนวิชญ์ สำเริง<br>
             ชื่อเล่น : มีน<br>
-            ปัจจุบันกำลังศึกษาอยู่ที่มหาวิทยาลัยราชภัฏเทพสตรี ลพบุรี<br>
+            ปัจจุบันกำลังศึกษาอยู่ที่ มหาวิทยาลัยราชภัฏเทพสตรี ลพบุรี<br>
             สาขาวิชาวิทยาการคอมพิวเตอร์ คณะเทคโนโลยีสารสนเทศ ชั้นปีที่ 3
+            จบการศึกษามาจาก โรงเรียนสาธิตมหาวิทยาลัยราชภัฏเทพสตรี <br>
         </p>
 
         <div style="text-align: center; margin-top:18px;">
@@ -120,3 +121,4 @@
 
 </body>
 </html>
+
