--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -22,8 +23,8 @@
             ชื่อ : นายธนวิชญ์ สำเริง<br>
             ชื่อเล่น : มีน<br>
             ปัจจุบันกำลังศึกษาอยู่ที่ มหาวิทยาลัยราชภัฏเทพสตรี ลพบุรี<br>
-            สาขาวิชาวิทยาการคอมพิวเตอร์ คณะเทคโนโลยีสารสนเทศ ชั้นปีที่ 3
-            จบการศึกษามาจาก โรงเรียนสาธิตมหาวิทยาลัยราชภัฏเทพสตรี <br>
+            สาขาวิชาวิทยาการคอมพิวเตอร์ คณะเทคโนโลยีสารสนเทศ ชั้นปีที่ 3<br>
+            จบการศึกษามาจาก โรงเรียนสาธิตมหาวิทยาลัยราชภัฏเทพสตรี<br>
         </p>
 
         <div style="text-align: center; margin-top:18px;">
