--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                background:rgba(255,255,255,0.65); padding:10px 16px; 
                border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15);
                display:flex; align-items:center; gap:10px;">
-                <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" width="28">
+                <img src="image/fb.png" width="28">
                 <span>Facebook</span>
             </a>
 
@@ -104,7 +104,7 @@
                background:rgba(255,255,255,0.65); padding:10px 16px; 
                border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15);
                display:flex; align-items:center; gap:10px;">
-                <img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" width="28">
+                <img src="image/ig.png" width="28">
                 <span>Instagram</span>
             </a>
 
@@ -113,7 +113,7 @@
                background:rgba(255,255,255,0.65); padding:10px 16px; 
                border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15);
                display:flex; align-items:center; gap:10px;">
-                <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" width="28">
+                <img src="image/tele.png" width="28">
                 <span>โทร : 092-8094299</span>
             </a>
 
@@ -122,4 +122,5 @@
 
 </body>
 </html>
+
 
