--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
-
-<!DOCTYPE html>
-<html lang="th">
+<!DOCTYPE html> <!-- กำหนดชนิดของเอกสารเป็น HTML5 -->
+<html lang="th"> <!-- กำหนดภาษาของเว็บเป็นภาษาไทย -->
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>แนะนำตัวเอง</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8"> <!-- กำหนดการเข้ารหัสของเอกสารเป็น UTF-8 (รองรับภาษาไทยและตัวอักษรพิเศษอื่นๆ) -->
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- ปรับขนาดเว็บไซต์ให้เหมาะสมกับขนาดหน้าจออุปกรณ์ -->
+    <title>แนะนำตัวเอง</title> <!-- กำหนดชื่อเรื่องที่แสดงในแท็บของบราวเซอร์ -->
+    <link rel="stylesheet" href="style.css"> <!-- ลิงก์ไปยังไฟล์ CSS สำหรับตกแต่งเว็บ -->
 </head>
 <body>
 
     <div style="text-align: center; margin-top:18px;">
-        <img src="image/tru.png" alt="trulogo" width="350">
+        <img src="image/tru.png" alt="trulogo" width="350"> <!-- แสดงภาพโลโก้ทรู (ปรับขนาดเป็น 350px) -->
     </div>
 
-    <h1 style="text-align:center; color:black; margin-top:10px;">แนะนำตัวเอง</h1>
+    <h1 style="text-align:center; color:black; margin-top:10px;">แนะนำตัวเอง</h1> <!-- หัวข้อหลักของเว็บ -->
 
     <!-- ⭐ ประวัติส่วนตัว -->
     <div class="info profile">
-        <h2 style="text-align: center;">ประวัติส่วนตัว</h2>
+        <h2 style="text-align: center;">ประวัติส่วนตัว</h2> <!-- หัวข้อย่อยสำหรับประวัติส่วนตัว -->
         
-        <p style="text-align:center; line-height:1.8;">
+        <p style="text-align:center; line-height:1.8;"> <!-- ข้อความแนะนำตัว -->
             ชื่อ : นายธนวิชญ์ สำเริง<br>
             ชื่อเล่น : มีน<br>
             ปัจจุบันกำลังศึกษาอยู่ที่ มหาวิทยาลัยราชภัฏเทพสตรี ลพบุรี<br>
@@ -28,50 +27,50 @@
         </p>
 
         <div style="text-align: center; margin-top:18px;">
-            <img src="image/me.jpg" alt="me" width="440" height="300">
+            <img src="image/me.jpg" alt="me" width="440" height="300"> <!-- แสดงภาพของผู้เขียน -->
         </div>
     </div>
 
     <!-- 🌟 งานอดิเรก -->
     <div class="info hobby">
-        <h2 style="text-align: center;">งานอดิเรก</h2>
+        <h2 style="text-align: center;">งานอดิเรก</h2> <!-- หัวข้อสำหรับงานอดิเรก -->
 
-        <ul style="display:flex; justify-content:center; align-items:center; gap:12px; padding:0; margin:0;">
-            <li>เล่นเกม</li>
-            <li>นอน</li>
-            <li>อ่านหนังสือ</li>
-            <li>ทำการบ้าน</li>
+        <ul style="display:flex; justify-content:center; align-items:center; gap:12px; padding:0; margin:0;"> <!-- รายการงานอดิเรกในรูปแบบของลิสต์แนวนอน -->
+            <li>เล่นเกม</li> <!-- งานอดิเรกเล่นเกม -->
+            <li>นอน</li> <!-- งานอดิเรกนอน -->
+            <li>อ่านหนังสือ</li> <!-- งานอดิเรกอ่านหนังสือ -->
+            <li>ทำการบ้าน</li> <!-- งานอดิเรกทำการบ้าน -->
         </ul>
     </div>
 
     <!-- 🚗 รถ -->
     <div class="info car">
-        <h2 style="text-align: center;">ชื่นชอบรถยนต์ Porche 911 gt3rs</h2>
+        <h2 style="text-align: center;">ชื่นชอบรถยนต์ Porche 911 gt3rs</h2> <!-- หัวข้อเกี่ยวกับรถยนต์ที่ชื่นชอบ -->
         <div style="text-align:center;">
-            <img src="image/gt3rs.avif" alt="Porche 911 gt3rs" width="600">
+            <img src="image/gt3rs.avif" alt="Porche 911 gt3rs" width="600"> <!-- แสดงภาพของรถยนต์ที่ชื่นชอบ -->
         </div>
     </div>
 
     <!-- 🎵 + 🎮 กล่องเพลง/เกม -->
     <div class="info info2">
       
-        <div style="flex:1; min-width:220px;">
-            <h2 style="text-align:center;">ชอบฟังเพลง</h2>
-            <p style="font-size:18px; text-align:center;">Lil Nas X - Old Town Road</p>
+        <div style="flex:1; min-width:220px;"> <!-- กำหนดการจัดเรียงแบบ Flexbox สำหรับกล่องเพลง -->
+            <h2 style="text-align:center;">ชอบฟังเพลง</h2> <!-- หัวข้อเกี่ยวกับการฟังเพลง -->
+            <p style="font-size:18px; text-align:center;">Lil Nas X - Old Town Road</p> <!-- ชื่อเพลงที่ชอบ -->
             <div style="text-align:center;">
-                <img src="image/music1.jpg" alt="music1" width="300" style="display:block; margin: auto;">
+                <img src="image/music1.jpg" alt="music1" width="300" style="display:block; margin: auto;"> <!-- แสดงภาพของเพลง -->
             </div>
             <div style="text-align:center; margin-top:8px;">
-                <a href="https://www.youtube.com/watch?v=r7qovpFAGrQ&list=RDr7qovpFAGrQ&start_radio=1" style="font-size:16px;">คลิกเพื่อฟังเพลง</a>
+                <a href="https://www.youtube.com/watch?v=r7qovpFAGrQ&list=RDr7qovpFAGrQ&start_radio=1" style="font-size:16px;">คลิกเพื่อฟังเพลง</a> <!-- ลิงก์ไปยัง YouTube เพื่อฟังเพลง -->
             </div>
         </div>
 
-        <div style="flex:1; min-width:220px;">
-            <h2 style="text-align:center;">ชอบเล่นเกม</h2>
-            <p style="font-size:18px; text-align:center;">ชอบเล่นเกมส์ : Valorant</p>
-            <div style="display:flex; justify-content:center; gap:20px; margin-top:10px;">
-                <img src="image/valo.jpg" alt="valorant" width="200" style="border-radius:10px;">
-                <img src="image/valo2.png" alt="valo2" width="200" style="border-radius:10px;">
+        <div style="flex:1; min-width:220px;"> <!-- กำหนดการจัดเรียงแบบ Flexbox สำหรับกล่องเกม -->
+            <h2 style="text-align:center;">ชอบเล่นเกม</h2> <!-- หัวข้อเกี่ยวกับเกมที่ชอบ -->
+            <p style="font-size:18px; text-align:center;">ชอบเล่นเกมส์ : Valorant</p> <!-- ชื่อเกมที่ชอบ -->
+            <div style="display:flex; justify-content:center; gap:20px; margin-top:10px;"> <!-- แสดงภาพของเกมในรูปแบบ Flexbox -->
+                <img src="image/valo.jpg" alt="valorant" width="200" style="border-radius:10px;"> <!-- ภาพของเกม Valorant -->
+                <img src="image/valo2.png" alt="valo2" width="200" style="border-radius:10px;"> <!-- ภาพของเกม Valorant อีกภาพ -->
             </div>
         </div>
 
@@ -79,7 +78,7 @@
 
     <!-- ติดต่อ -->
     <div class="info contact-box">
-        <h2 style="text-align:center;">ติดต่อฉัน</h2>
+        <h2 style="text-align:center;">ติดต่อฉัน</h2> <!-- หัวข้อสำหรับข้อมูลติดต่อ -->
 
         <div style="
             display: flex; 
@@ -90,30 +89,33 @@
             margin-top: 15px;
         ">
 
+            <!-- ลิงก์ไปยัง Facebook -->
             <a href="https://www.facebook.com/rashz.tnwsrz/"
                style="text-decoration:none; color:#5a4e6a; 
                background:rgba(255,255,255,0.65); padding:10px 16px; 
                border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15);
                display:flex; align-items:center; gap:10px;">
-                <img src="image/fb.png" width="28">
+                <img src="image/fb.png" width="28"> <!-- ไอคอน Facebook -->
                 <span>Facebook</span>
             </a>
 
+            <!-- ลิงก์ไปยัง Instagram -->
             <a href="https://www.instagram.com/_meenthanawit" 
                style="text-decoration:none; color:#5a4e6a; 
                background:rgba(255,255,255,0.65); padding:10px 16px; 
                border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15);
                display:flex; align-items:center; gap:10px;">
-                <img src="image/ig.png" width="28">
+                <img src="image/ig.png" width="28"> <!-- ไอคอน Instagram -->
                 <span>Instagram</span>
             </a>
 
+            <!-- ลิงก์โทรศัพท์ -->
             <a href="tel:0928094299"
                style="text-decoration:none; color:#5a4e6a; 
                background:rgba(255,255,255,0.65); padding:10px 16px; 
                border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15);
                display:flex; align-items:center; gap:10px;">
-                <img src="image/tele.png" width="28">
+                <img src="image/tele.png" width="28"> <!-- ไอคอนโทรศัพท์ -->
                 <span>โทร : 092-8094299</span>
             </a>
 
@@ -122,5 +124,3 @@
 
 </body>
 </html>
-
-
