--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div style="text-align: center; margin-top:18px;">
-        <img src="image/tru.png" alt="trulogo" width="350"> <!-- แสดงภาพโลโก้ทรู (ปรับขนาดเป็น 350px) -->
+        <img src="image/tru.png" alt="trulogo" width="350"> <!-- แสดงภาพโลโก้ (ปรับขนาดเป็น 350px) -->
     </div>
 
     <h1 style="text-align:center; color:black; margin-top:10px;">แนะนำตัวเอง</h1> <!-- หัวข้อหลักของเว็บ -->
@@ -124,3 +124,4 @@
 
 </body>
 </html>
+
