--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
-<!DOCTYPE html> <!-- กำหนดชนิดของเอกสารเป็น HTML5 -->
-<html lang="th"> <!-- กำหนดภาษาของเว็บเป็นภาษาไทย -->
+<!DOCTYPE html> <!-- กำหนดชนิดของเอกสารเป็น HTML5 ซึ่งช่วยให้เบราว์เซอร์รู้ว่าเอกสารนี้เป็น HTML5 และควรใช้มาตรฐานการแสดงผลของ HTML5 -->
+<html lang="th"> <!-- กำหนดภาษาของเว็บเป็นภาษาไทย โดยการตั้งค่า lang="th" เพื่อช่วยให้เครื่องมือค้นหาและบราวเซอร์รู้ว่าเว็บนี้ใช้ภาษาไทย -->
 <head>
-    <meta charset="utf-8"> <!-- กำหนดการเข้ารหัสของเอกสารเป็น UTF-8 (รองรับภาษาไทยและตัวอักษรพิเศษอื่นๆ) -->
-    <title>แนะนำตัวเอง</title> <!-- กำหนดชื่อเรื่องที่แสดงในแท็บของบราวเซอร์ -->
-    <link rel="stylesheet" href="style.css"> <!-- ลิงก์ไปยังไฟล์ CSS สำหรับตกแต่งเว็บ -->
+    <meta charset="utf-8"> <!-- กำหนดการเข้ารหัสของเอกสารเป็น UTF-8 เพื่อรองรับตัวอักษรภาษาไทยและสัญลักษณ์พิเศษอื่นๆ -->
+    <title>แนะนำตัวเอง</title> <!-- กำหนดชื่อของเอกสารที่แสดงบนแท็บของบราวเซอร์ เป็น "แนะนำตัวเอง" -->
+    <link rel="stylesheet" href="style.css"> <!-- ลิงก์ไปยังไฟล์ CSS ภายนอก (style.css) ที่จะใช้ตกแต่งหน้าเว็บ -->
 </head>
 <body>
 
-    <div style="text-align: center; margin-top:18px;">
-        <img src="image/tru.png" alt="trulogo" width="350"> <!-- แสดงภาพโลโก้ (ปรับขนาดเป็น 350px) -->
+    <div style="text-align: center; margin-top:18px;"> <!-- จัดให้อีกบล็อกอยู่กลางหน้า (text-align: center) และกำหนดระยะห่างด้านบน 18px (margin-top) -->
+        <img src="image/tru.png" alt="trulogo" width="350"> <!-- แสดงภาพโลโก้ tru.png ที่มีขนาดกว้าง 350px และจัดตำแหน่งให้อยู่กึ่งกลางด้วย text-align: center -->
     </div>
 
-    <h1 style="text-align:center; color:black; margin-top:10px;">แนะนำตัวเอง</h1> <!-- หัวข้อหลักของเว็บ -->
+    <h1 style="text-align:center; color:black; margin-top:10px;">แนะนำตัวเอง</h1> <!-- หัวข้อหลักของเว็บ "แนะนำตัวเอง" ที่จัดตำแหน่งให้อยู่กลางหน้าจอและมีสีข้อความเป็นสีดำ พร้อมเพิ่มระยะห่างบน 10px (margin-top) -->
 
     <!-- ⭐ ประวัติส่วนตัว -->
     <div class="info profile">
         <h2 style="text-align: center;">ประวัติส่วนตัว</h2> <!-- หัวข้อย่อยสำหรับประวัติส่วนตัว -->
         
-        <p style="text-align:center; line-height:1.8;"> <!-- ข้อความแนะนำตัว -->
-            ชื่อ : นายธนวิชญ์ สำเริง<br>
+        <p style="text-align:center; line-height:1.8;"> <!-- ข้อความแนะนำตัวที่จัดตำแหน่งให้อยู่กลาง (text-align: center) และเพิ่มระยะห่างระหว่างบรรทัด 1.8 (line-height) -->
+            ชื่อ : นายธนวิชญ์ สำเริง<br> <!-- ข้อมูลส่วนตัว -->
             ชื่อเล่น : มีน<br>
             ปัจจุบันกำลังศึกษาอยู่ที่ มหาวิทยาลัยราชภัฏเทพสตรี ลพบุรี<br>
             สาขาวิชาวิทยาการคอมพิวเตอร์ คณะเทคโนโลยีสารสนเทศ ชั้นปีที่ 3<br>
             จบการศึกษามาจาก โรงเรียนสาธิตมหาวิทยาลัยราชภัฏเทพสตรี<br>
         </p>
 
-        <div style="text-align: center; margin-top:18px;">
-            <img src="image/me.jpg" alt="me" width="440" height="300"> <!-- แสดงภาพของผู้เขียน -->
+        <div style="text-align: center; margin-top:18px;"> <!-- จัดให้อยู่กลางหน้า (text-align: center) และเพิ่มระยะห่างด้านบน 18px (margin-top) -->
+            <img src="image/me.jpg" alt="me" width="440" height="300"> <!-- แสดงภาพของผู้เขียนที่มีขนาด 440x300px และจัดให้อยู่กลาง -->
         </div>
     </div>
 
     <!-- 🌟 งานอดิเรก -->
     <div class="info hobby">
         <h2 style="text-align: center;">งานอดิเรก</h2> <!-- หัวข้อสำหรับงานอดิเรก -->
-
-        <ul style="display:flex; justify-content:center; align-items:center; gap:12px; padding:0; margin:0;"> <!-- รายการงานอดิเรกในรูปแบบของลิสต์แนวนอน -->
+        <ul style="display:flex; justify-content:center; align-items:center; gap:12px; padding:0; margin:0;"> <!-- ใช้ Flexbox จัดเรียงรายการในแนวนอน (display: flex) และจัดให้อยู่กลางทั้งแนวนอน (justify-content: center) และแนวตั้ง (align-items: center) พร้อมช่องว่างระหว่างรายการ 12px (gap) -->
             <li>เล่นเกม</li> <!-- งานอดิเรกเล่นเกม -->
             <li>นอน</li> <!-- งานอดิเรกนอน -->
             <li>อ่านหนังสือ</li> <!-- งานอดิเรกอ่านหนังสือ -->
@@ -45,46 +44,46 @@
     <!-- 🚗 รถ -->
     <div class="info car">
         <h2 style="text-align: center;">ชื่นชอบรถยนต์ Porche 911 gt3rs</h2> <!-- หัวข้อเกี่ยวกับรถยนต์ที่ชื่นชอบ -->
-        <div style="text-align:center;">
-            <img src="image/gt3rs.avif" alt="Porche 911 gt3rs" width="600"> <!-- แสดงภาพของรถยนต์ที่ชื่นชอบ -->
+        <div style="text-align:center;"> <!-- จัดให้อยู่กลางหน้า -->
+            <img src="image/gt3rs.avif" alt="Porche 911 gt3rs" width="600"> <!-- แสดงภาพของรถยนต์ที่ชื่นชอบที่มีขนาดกว้าง 600px และจัดให้อยู่กลาง -->
         </div>
     </div>
 
     <!-- 🎵 + 🎮 กล่องเพลง/เกม -->
     <div class="info info2">
       
-        <div style="flex:1; min-width:220px;"> <!-- กำหนดการจัดเรียงแบบ Flexbox สำหรับกล่องเพลง -->
-            <h2 style="text-align:center;">ชอบฟังเพลง</h2> <!-- หัวข้อเกี่ยวกับการฟังเพลง -->
-            <p style="font-size:18px; text-align:center;">Lil Nas X - Old Town Road</p> <!-- ชื่อเพลงที่ชอบ -->
+        <div style="flex:1; min-width:220px;"> <!-- ใช้ Flexbox เพื่อจัดการกับการแสดงผลโดยให้แต่ละกล่องมีขนาดขั้นต่ำ 220px และขยายตามขนาดพื้นที่ที่เหลือ (flex: 1) -->
+            <h2 style="text-align:center;">ชอบฟังเพลง</h2> <!-- หัวข้อเพลง -->
+            <p style="font-size:18px; text-align:center;">Lil Nas X - Old Town Road</p> <!-- ชื่อเพลงที่ชอบและตั้งขนาดฟอนต์เป็น 18px -->
             <div style="text-align:center;">
-                <img src="image/music1.jpg" alt="music1" width="300" style="display:block; margin: auto;"> <!-- แสดงภาพของเพลง -->
+                <img src="image/music1.jpg" alt="music1" width="300" style="display:block; margin: auto;"> <!-- แสดงภาพของเพลงที่ขนาด 300px และจัดให้อยู่กลาง -->
             </div>
             <div style="text-align:center; margin-top:8px;">
                 <a href="https://www.youtube.com/watch?v=r7qovpFAGrQ&list=RDr7qovpFAGrQ&start_radio=1" style="font-size:16px;">คลิกเพื่อฟังเพลง</a> <!-- ลิงก์ไปยัง YouTube เพื่อฟังเพลง -->
             </div>
         </div>
 
-        <div style="flex:1; min-width:220px;"> <!-- กำหนดการจัดเรียงแบบ Flexbox สำหรับกล่องเกม -->
-            <h2 style="text-align:center;">ชอบเล่นเกม</h2> <!-- หัวข้อเกี่ยวกับเกมที่ชอบ -->
-            <p style="font-size:18px; text-align:center;">ชอบเล่นเกมส์ : Valorant</p> <!-- ชื่อเกมที่ชอบ -->
-            <div style="display:flex; justify-content:center; gap:20px; margin-top:10px;"> <!-- แสดงภาพของเกมในรูปแบบ Flexbox -->
+        <div style="flex:1; min-width:220px;"> <!-- ใช้ Flexbox เพื่อจัดการกับการแสดงผล โดยให้กล่องเกมมีขนาดขั้นต่ำ 220px และขยายตามพื้นที่ที่เหลือ -->
+            <h2 style="text-align:center;">ชอบเล่นเกม</h2> <!-- หัวข้อเกม -->
+            <p style="font-size:18px; text-align:center;">ชอบเล่นเกมส์ : Valorant</p> <!-- ชื่อเกมที่ชอบและตั้งขนาดฟอนต์เป็น 18px -->
+            <div style="display:flex; justify-content:center; gap:20px; margin-top:10px;"> <!-- ใช้ Flexbox เพื่อจัดวางภาพของเกมในแนวนอน (justify-content: center) พร้อมช่องว่างระหว่างภาพ 20px (gap) -->
                 <img src="image/valo.jpg" alt="valorant" width="200" style="border-radius:10px;"> <!-- ภาพของเกม Valorant -->
-                <img src="image/valo2.png" alt="valo2" width="200" style="border-radius:10px;"> <!-- ภาพของเกม Valorant อีกภาพ -->
+                <img src="image/valo2.png" alt="valo2" width="200" style="border-radius:10px;"> <!-- ภาพเกม Valorant อีกภาพ -->
             </div>
         </div>
 
     </div>
 
-    <!-- ติดต่อ -->
+    <!-- 📞 ติดต่อ -->
     <div class="info contact-box">
         <h2 style="text-align:center;">ติดต่อฉัน</h2> <!-- หัวข้อสำหรับข้อมูลติดต่อ -->
 
         <div style="
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
-            gap: 20px; 
-            flex-wrap: wrap;
+            display: flex;  <!-- ใช้ Flexbox เพื่อจัดเรียงองค์ประกอบในแนวนอน -->
+            justify-content: center;  <!-- จัดให้องค์ประกอบทั้งหมดอยู่กลางในแนวนอน -->
+            align-items: center;  <!-- จัดให้องค์ประกอบทั้งหมดอยู่กลางในแนวตั้ง -->
+            gap: 20px;  <!-- กำหนดช่องว่างระหว่างลิงก์แต่ละอันเป็น 20px -->
+            flex-wrap: wrap;  <!-- ทำให้กล่องสามารถขึ้นบรรทัดใหม่ได้เมื่อพื้นที่แคบ -->
             margin-top: 15px;
         ">
 
@@ -92,30 +91,30 @@
             <a href="https://www.facebook.com/rashz.tnwsrz/"
                style="text-decoration:none; color:#5a4e6a; 
                background:rgba(255,255,255,0.65); padding:10px 16px; 
-               border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15);
+               border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15); 
                display:flex; align-items:center; gap:10px;">
                 <img src="image/fb.png" width="28"> <!-- ไอคอน Facebook -->
-                <span>Facebook</span>
+                <span>Facebook</span> <!-- ข้อความ Facebook -->
             </a>
 
             <!-- ลิงก์ไปยัง Instagram -->
             <a href="https://www.instagram.com/_meenthanawit" 
                style="text-decoration:none; color:#5a4e6a; 
                background:rgba(255,255,255,0.65); padding:10px 16px; 
-               border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15);
+               border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15); <!-- กำหนดให้มุมทั้งสี่ของกล่อง (หรือองค์ประกอบ) มีความโค้ง 14 พิกเซล -->
                display:flex; align-items:center; gap:10px;">
                 <img src="image/ig.png" width="28"> <!-- ไอคอน Instagram -->
-                <span>Instagram</span>
+                <span>Instagram</span> <!-- ข้อความ Instagram -->
             </a>
 
             <!-- ลิงก์โทรศัพท์ -->
             <a href="tel:0928094299"
                style="text-decoration:none; color:#5a4e6a; 
-               background:rgba(255,255,255,0.65); padding:10px 16px; 
-               border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15);
-               display:flex; align-items:center; gap:10px;">
+               background:rgba(255,255,255,0.65); padding:10px 16px; <!-- สี bg -->
+               border-radius:14px; box-shadow:0 6px 20px rgba(0,0,0,0.15);  <!-- กำหนดให้มุมทั้งสี่ของกล่อง (หรือองค์ประกอบ) มีความโค้ง 14 พิกเซล -->
+               display:flex; align-items:center; gap:10px;"> <!-- จัดเรียงองค์ประกอบเป็นแนวนอน -->
                 <img src="image/tele.png" width="28"> <!-- ไอคอนโทรศัพท์ -->
-                <span>โทร : 092-8094299</span>
+                <span>โทร : 092-8094299</span> <!-- ข้อความหมายเลขโทรศัพท์ -->
             </a>
 
         </div>
@@ -123,5 +122,3 @@
 
 </body>
 </html>
-
-
